Fixed scrolling layout issue

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -102,7 +102,8 @@ html {
 body #grid
 {
 /*	background:transparent url(../i/grid.png) -99px -95px repeat;	
-*/	min-height:100%;background:transparent url(../i/embed/grid.png) -99px -95px repeat;	
+*/	min-height:100%;
+	background:transparent url(../i/embed/grid.png) -99px -95px repeat;	
 	width:100%;
 	position:absolute;
 	padding-bottom:111px;/* scrolled class style*/
@@ -120,6 +121,37 @@ body #container
 	width:924px;
 	margin: 0 0 0 87px;
 	position:relative;
+}
+
+
+/* Awesome fix for the js scrolling */
+html.scroll body #container {
+	margin:0;
+}
+
+html.scroll header,html.scroll #main {
+	margin: 0 0 0 87px;
+}
+
+html.scroll #fixed-buffer-bottom {
+	position: fixed;
+	width: 100%;
+	top: 740px;
+	height: 100%;
+	z-index: 999;
+	background: url(../i/background.jpg) no-repeat center center fixed;
+	-webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+}
+
+html.scroll #fixed-buffer-bottom .buffer-grid {
+	width:100%;
+	height:100%;
+	margin:0;
+	padding:0;
+	background:transparent url(../i/embed/grid.png) -99px -1px repeat;
 }
 
 html.scroll body #container 
@@ -637,7 +669,7 @@ body #container #main section#content .main-col
 
 html.scroll body #container #main section#content .main-col
 {
-	margin-left:184px;	
+	margin-left:185px;	
 }
 
 html.scroll body.work #container #main section#content .main-col
